[FEAT] 모은 돌 상세 조회 api 구현 #4